--- a/合约功能检查.md
+++ b/合约功能检查.md
@@ -11,18 +11,17 @@
 ```
 ### 控制台的使用
 1. 查看官方文档
+
 >#### 启动控制台：
-```bash
-$ ./start.sh [groupId] [privateKey]   
-```
-启动命令可以指定两个可选参数：           
-- `groupId`: 群组ID, 不指定则默认为`applicationContext.xml`文件中`channelService`配置的groupId。           
-- `privateKey`: 交易发送者外部账号的私钥，不指定则默认从`conf`目录下的privateKey.properties中读取私钥，如果该文件内容被清空，则随机生成外部账号私钥并将生产的私钥保持在该私钥配置文件中。 
+>```bash
+>$ ./start.sh [groupId] [privateKey]   
+>```
+>启动命令可以指定两个可选参数：           
+>- `groupId`: 群组ID, 不指定则默认为`applicationContext.xml`文件中`channelService`配置的groupId。           
+>- `privateKey`: 交易发送者外部账号的私钥，不指定则默认从`conf`目录下的privateKey.properties中读取私钥，如果该文件内容被清空，则随机生成外部账号私钥并将生产的私钥保持在该私钥配置文件中。 
 
-示例
-```bash
-# 以群组2，私钥账号地址为3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4登录控制台
-$ ./start.sh 2 3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4  
-sa1
-
-sad1
+>示例
+>```bash
+># 以群组2，私钥账号地址为3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4登录控制台
+>$ ./start.sh 2 3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4  
+>```
