--- a/合约功能检查.md
+++ b/合约功能检查.md
@@ -18,9 +18,18 @@
 >```
 >启动命令可以指定两个可选参数：           
 >- `groupId`: 群组ID, 不指定则默认为`applicationContext.xml`文件中`channelService`配置的groupId。           
->- `privateKey`: 交易发送者外部账号的私钥，不指定则默认从`conf`目录下的privateKey.properties中读取私钥，如果该文件内容被清空，则随机生成外部账号私钥并将生产的私钥保持在该私钥配置文件中。 
+>- `privateKey`: 交易发送者外部账号的私钥，不指定则默认从`conf`目录下的privateKey.properties中读取私钥，如果该文件内容被清空，则随机生成外部账号私钥并将生产的私钥保持在该私钥配置文件中。 <br />
 >示例
 >```bash
 ># 以群组2，私钥账号地址为3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4登录控制台
 >$ ./start.sh 2 3bed914595c159cbce70ec5fb6aff3d6797e0c5ee5a7a9224a21cae8932d84a4  
 >```
+
+2. 先测试商家与用户之间的功能情况
+商家地址：0x4f42a3c513a9411954c193a50b1c4ab5393cb20b
+商家hex私钥：0x9099ffe712c486fd0f255844de197b8c763f38ca542ba3038974dc04b3ae48ec
+
+顾客1地址：0x9c97ba257d5188c78adf6c5e1deab3a33da140ad
+顾客1hex私钥：0x1f8878ee6cbfe6fed572994cba03e1bf64c927efd92053df228c71389aadc562
+
+    1.分别用两者的私钥启动控制台
