--- a/合约功能检查.md
+++ b/合约功能检查.md
@@ -27,7 +27,7 @@
 
 2. 先测试商家与用户之间的功能情况<br />
 商家地址：0x4f42a3c513a9411954c193a50b1c4ab5393cb20b<br />
-商家私钥(hex)：0x9099ffe712c486fd0f255844de197b8c763f38ca542ba3038974dc04b3ae48ec
+商家私钥(hex)：0x9099ffe712c486fd0f255844de197b8c763f38ca542ba3038974dc04b3ae48ec<br /><br />
 顾客1地址：0x9c97ba257d5188c78adf6c5e1deab3a33da140ad<br />
 顾客1私钥(hex)：0x1f8878ee6cbfe6fed572994cba03e1bf64c927efd92053df228c71389aadc562
 
@@ -36,5 +36,13 @@
     2. 采用CNS的方式部署合约，初始积分发放总量设为10000<br />
     ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/deploy.png)
     3. 测试合约的基础功能
+    ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_1.png)
+    3. 测试sale为默认值时的商店积分赠送情况
+    ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_2.png)
+    3. 设置sale为2并测试此时的商店积分赠送情况
+    ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_3.png)
+    3. 查看用户之间的积分传递情况
+    ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_3.png)
+
 
 
