--- a/合约功能检查.md
+++ b/合约功能检查.md
@@ -35,14 +35,22 @@
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/console_1.png)
 2. 采用CNS的方式部署合约，初始积分发放总量设为10000<br />
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/deploy.png)
+DeployByCNS的合約部署格式为：DeployByCNS + 合约名 +合约版本 + 构造函数参数
+
 3. 测试合约的基础功能
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_1.png)
+调用addSupply增加250个积分，结果正确
+
 3. 测试sale为默认值时的商店积分赠送情况
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_2.png)
+向顾客1传送550个积分，结果正确
+
 3. 设置sale为2并测试此时的商店积分赠送情况
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_3.png)
+设置当前商店赠送积分倍数为2，向顾客1传送1000个积分。顾客1实际收到2000个积分，结果正确。
 3. 查看用户之间的积分传递情况
 ![](https://github.com/marknash666/FiscoBcos-Exercises/blob/master/images/image-for-console/function_3.png)
+顾客1向一个新顾客发送100积分，新顾客实际收到100个积分，不受sale影响，结果正确
 
 
 
