--- a/lab3/合约功能检查.md
+++ b/lab3/合约功能检查.md
@@ -1,8 +1,8 @@
 # LAGCredit合约功能验证
 
-## 前置：合约的编写和初步功能验证已经在remix在线编译器上完成
+### 前置：合约的编写和初步功能验证已经在remix在线编译器上完成
 
-## 目标：使用FISCO BCOS提供的的console来部署LAGCredit合约并检查其功能的正确性
+### 目标：使用FISCO BCOS提供的的console来部署LAGCredit合约并检查其功能的正确性
 
 ### 虚拟用户
 为了测试功能，我们首先需要运行get_account.sh脚本来获得虚拟用户的信息，包括账户地址、账户私钥文件pem和hex类型的私钥
